refactor: optimize calculators and fix test case